# lab

./: .gitignore  README.md
c/: CMakeLists.txt  CMakeSettings.json  main_test.c  morpha.c  morpha.h
